Get rid of URISyntaxException
[1] http://stackoverflow.com/questions/749709/how-to-deal-with-the-urisyntaxexception